# fastapi-starter-template

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile  README.md  architecture.md  docker-compose.yml  dockerfile  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh  test-setup.sh  tsconfig.json
app/: app.py  config.py  main.py
app/middlewares/: request_id.py  setup.py
app/routes/: hello.py
app/services/: hello.py
scripts/: changelog.sh  changelog.ts  release.sh  release.ts  serve.py
tests/: conftest.py  test_hello.py
