[project]
name = "fastapi-starter-template"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.137.2", "pydantic-settings>=2.7.0"]

[dependency-groups]
dev = ["httpx2>=2.4.0", "pytest>=8.4.2", "ruff>=0.15.17", "ty>=0.0.50"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "warn"
